[package]
name = "rackit"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Universal network device configuration engine for Rust"
documentation = "https://docs.rs/rackit"
homepage = "https://github.com/yourusername/rackit"
repository = "https://github.com/yourusername/rackit"
license = "MIT"
keywords = ["network", "automation", "configuration", "serial", "eltex"]
categories = ["network-programming", "command-line-utilities", "hardware-support"]
readme = "README.md"

[dependencies]
serialport = "4.7.2"
thiserror = "2.0.12"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
tempfile = "3.0"

[[bin]]
name = "rackit"
path = "src/main.rs"
